reveal Axios config

--- a/whatsapp-frontend/.env_sample
+++ b/whatsapp-frontend/.env_sample
@@ -12,5 +12,5 @@ REACT_APP_FIREBASE_APP_ID=YOUR-REACT_APP_FIREBASE_APP_ID
 REACT_APP_FIREBASE_MEASUREMENT_ID=YOUR-REACT_APP_FIREBASE_MEASUREMENT_ID
 
 # Axios host configuration
-REACT_APP_AXIOS_DEV_HOST=YOUR-REACT_APP_AXIOS_DEV_HOST
-REACT_APP_AXIOS_PROD_HOST=YOUR-REACT_APP_AXIOS_PROD_HOST
+REACT_APP_AXIOS_DEV_HOST=http://localhost:9000
+REACT_APP_AXIOS_PROD_HOST=https://ez-whatsapp.herokuapp.com
